[package]
name = "rusty_distrochooser"
version = "4.0.0"
authors = [ "Christoph Müller <me@0fury.de>" ]

[dependencies.iron]
version = "*"
[dependencies.bodyparser]
git = "https://github.com/iron/body-parser.git"

[dependencies]
router = "*"
hyper = "*"
mysql = "*"
params = "*"
time = "*"
serde = "*"
serde_json = "*"
serde_derive = "*"
iron_compress = "*"